Add note-taking system outputs, implement binary tree structure, and update Tic Tac Toe module
- Added output files for note-taking system (output04.txt, output05.txt) to capture various scenarios.
- Implemented a binary tree with insertion, search, and pretty print functionalities in btree.cpp and btree.h.
- Created main.cpp for testing the binary tree implementation.
- Updated Makefile for Tic Tac Toe to support Python bindings using pybind11, including necessary configurations for shared libraries and runtime DLLs.
- Introduced TicTakToe.cpp to expose game logic to Python, including exception handling and method bindings.
- Removed unused files: parenthesizer.cpp and test.cpp, along with their corresponding executables and object files.

--- a/Tic Tak Toe/Makefile
+++ b/Tic Tak Toe/Makefile
@@ -1,59 +1,100 @@
 # Compiler
 CXX = g++
 # Compile flags: -g for debugging, -Wall for warnings, -std=c++11 or higher
-CXXFLAGS = -g -Wall -std=c++11
+# Add flags for shared library and position independent code (PIC)
+CXXFLAGS = -g -Wall -std=c++11 -shared -fPIC
 
-# Source files directory (assuming they are in the same directory as the Makefile)
+# --- Python/pybind11 Configuration ---
+# Use python to get necessary flags (adjust 'python' if needed)
+PYBIND11_INCLUDES = $(shell python -m pybind11 --includes)
+PYTHON_INCLUDES = $(shell python -c "import sysconfig; print('-I' + sysconfig.get_path('include'))")
+# Get Python library path and library name/flags
+PYTHON_LIB_PATH = $(shell python -c "import sysconfig; print('-L' + sysconfig.get_config_var('LIBDIR'))")
+PYTHON_LIB = $(shell python -c "import sysconfig; print('-lpython' + sysconfig.get_config_var('VERSION'))") # e.g., -lpython313
+
+# Combine CXXFLAGS with Python/pybind11 includes
+CXXFLAGS += $(PYBIND11_INCLUDES) $(PYTHON_INCLUDES)
+
+# --- MinGW Runtime DLLs (Adjust path if your MSYS2 is different) ---
+MINGW_BIN_PATH = D:/MSYS2/ucrt64/bin
+# Common runtime DLLs needed by GCC builds on Windows
+RUNTIME_DLLS = $(MINGW_BIN_PATH)/libstdc++-6.dll $(MINGW_BIN_PATH)/libgcc_s_seh-1.dll
+# Add others if needed, e.g., $(MINGW_BIN_PATH)/libwinpthread-1.dll
+
+# --- Project Files ---
+# Source files directory
 SRC_DIR = .
 # Build directory for object and dependency files
 BUILD_DIR = build
 
-# Source files (find all .cpp files in SRC_DIR)
-# SRCS = $(wildcard $(SRC_DIR)/*.cpp) # Alternative if you want all .cpp files
-SRCS = games.cpp board.cpp players.cpp bots.cpp test.cpp
+# Source files for the module (excluding test.cpp)
+SRCS = games.cpp board.cpp players.cpp bots.cpp TicTakToe.cpp # Corrected: player.cpp not players.cpp
 
 # Object files (place them in BUILD_DIR)
 OBJS = $(addprefix $(BUILD_DIR)/, $(SRCS:.cpp=.o))
 # Dependency files (place them in BUILD_DIR)
 DEPS = $(OBJS:.o=.d)
 
-# Header files (for dependency tracking - assuming they are in SRC_DIR)
-# No need to list them explicitly if using dependency generation correctly
-# HDRS = games.h board.h players.h bots.h utils.h
+# Target module name (must match PYBIND11_MODULE name)
+MODULE_NAME = TicTakToe
+# Determine Python extension suffix (.pyd for Windows, .so for others)
+ifeq ($(OS),Windows_NT)
+    MODULE_EXT = .pyd
+else
+    MODULE_EXT = .so
+endif
+TARGET = $(MODULE_NAME)$(MODULE_EXT)
 
-# Target executable name
-TARGET = main
+# Default rule: build the target module
+all: $(TARGET) copy_dlls
 
-# Default rule: build the target executable
-all: $(TARGET)
-
-# Rule to link the executable
+# Rule to link the Python module (shared library)
 $(TARGET): $(OBJS)
-	@echo "Linking..."
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJS)
+	@echo "Linking Python module..."
+	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJS) $(PYTHON_LIB_PATH) $(PYTHON_LIB)
 	@echo "Build finished: $(TARGET)"
+
+# Rule to copy runtime DLLs (Windows specific)
+copy_dlls: $(TARGET)
+ifeq ($(OS),Windows_NT)
+	@echo "Copying runtime DLLs..."
+	@for dll in $(RUNTIME_DLLS); do \
+		if [ -f $$dll ]; then \
+			cp $$dll . ; \
+		else \
+			echo "Warning: DLL $$dll not found." ; \
+		fi; \
+	done
+	@echo "DLLs copied (if found)."
+else
+	@echo "Skipping DLL copy on non-Windows OS."
+endif
 
 # Rule to create the build directory
 $(BUILD_DIR):
 	@mkdir -p $(BUILD_DIR)
 
 # Rule to compile .cpp files into .o files in the BUILD_DIR
-# It depends on the BUILD_DIR existing
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp | $(BUILD_DIR)
 	@echo "Compiling $<..."
 	$(CXX) $(CXXFLAGS) -MMD -MP -c $< -o $@
 
 # Include generated dependency files
-# The '-' suppresses errors if the .d files don't exist yet
 -include $(DEPS)
 
 # Rule to clean up generated files
 clean:
 	@echo "Cleaning..."
 	rm -f $(TARGET)
+	# Also remove copied DLLs
+ifeq ($(OS),Windows_NT)
+	@for dll in $(RUNTIME_DLLS); do \
+		rm -f $(notdir $$dll) ; \
+	done
+endif
 	rm -rf $(BUILD_DIR) # Remove the entire build directory
 	@echo "Clean complete."
 
-# Phony targets are rules that don't represent actual files
-.PHONY: all clean
+# Phony targets
+.PHONY: all clean copy_dlls
 
